# coi

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  COPYING  README.md  build-docs.sh  build_docs.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_linters.sh  setup.cfg  setup.py  update-copyright.sh
cdao_interfaces/: __init__.py
cern/env_interfaces/: __init__.py  optenv.py  sepenv.py
cern/env_interfaces/machineenv/: machine.py
cernml/abc/: __init__.py  env_checker.py  machine.py  optenv.py  sepenv.py
cernml/coi/: __init__.py  _abc_helpers.py  _cancellation.py  _configurable.py  _env_checker.py  _func_opt.py  _machine.py  _optenv.py  _problem.py  _registration.py  _sepenv.py  _single_opt.py  _union_interfaces.py  cancellation.py  env_checker.py  machine.py  mpl_utils.py  optenv.py  problem.py  registration.py  sepenv.py
cernml/coi/checkers/: __init__.py  _configurable.py  _env.py  _full_check.py  _func_opt.py  _generic.py  _problem.py  _render.py  _single_opt.py
cernml/coi/unstable/: __init__.py  cancellation.py  japc_utils.py  renderer.py
cernml/coi/utils/: __init__.py  _render.py
docs/: api.md  changelog.md  changelog.rst  conf.py  guide.md  index.md  index.rst  roadmap.rst  tutorial.md
docs/_ext/: extra_directives.py  fix_napoleon_attributes_type.py  fix_xrefs.py  fixsig.py  replace_modname.py
docs/_static/: pydoctheme.css
docs/_templates/: layout.html  layout.html.license
docs/api/: cancellation.md  cancellation.rst  checkers.md  checkers.rst  classes.rst  coi.md  coi.rst  config.md  config.rst  configurable.rst  extras.rst  goalenv.rst  index.md  index.rst  intersections.rst  japc_utils.md  machinery.rst  mpl_utils.md  optproviders.rst  otherenvs.md  otherenvs.rst  protocols.rst  registration.rst  registration_errors.rst  registry.md  registry.rst  sep_goal_env.rst  spaces.md  spaces.rst  typeguards.rst
docs/examples/: configurable.rst  index.rst  parabola.rst
docs/guide/: cancellation.md  cancellation.rst  configurable.rst  control_flow.rst  core.md  core.rst  custom_optimizers.rst  funcopt.md  funcopt.rst  index.md  index.rst  migration_090.rst  minimal_env.py  minimal_env_class.py  minimal_env_loop.py  minimal_fopt_class.py  minimal_fopt_loop.py  minimal_sopt_class.py  minimal_sopt_loop.py  otherenvs.md  otherenvs.rst  quickstart.rst  registration.rst  registry.md  registry.rst
docs/tutorials/: geoff-blank.png.license  implement-singleoptimizable.md  implement-singleoptimizable.rst  index.md  index.rst  packaging.md  packaging.rst  render-human.png.license  render-mpl.png.license
examples/: _check_example_envs.py  configurable.py  parabola.py
machine/: __init__.py  goalspec.py
machineenv/: codecs.py
optenv/: __init__.py
src/cernml/coi/: __init__.py  _abc_helpers.py  _classes.py  _configurable.py  _custom_optimizer_provider.py  _custom_policy_provider.py  _extra_envs.py  _extra_goal_envs.py  _func_opt.py  _goalenv.py  _intersections.py  _machine.py  _machinery.py  _problem.py  _registration.py  _sepenv.py  _single_opt.py  _typeguards.py  _union_interfaces.py  cancellation.py  configurable.py  protocols.py
src/cernml/coi/checkers/: __init__.py  _configurable.py  _env.py  _full_check.py  _func_opt.py  _generic.py  _problem.py  _render.py  _reseed.py  _single_opt.py
src/cernml/coi/registration/: __init__.py  _base.py  _globals.py  _make.py  _plugins.py  _registry.py  _sentinel.py  _spec.py  _specdict.py  errors.py
tests/: test_cancellation.py  test_check_plugins.py  test_configurable.py  test_custom_optimizer_provider.py  test_custom_policy_provider.py  test_env_checker.py  test_env_checker_without_mpl.py  test_env_registry.py  test_func_opt.py  test_goalenv.py  test_inheritance.py  test_japc_utils.py  test_machine.py  test_machinery.py  test_make.py  test_optimizable.py  test_problem.py  test_registry.py  test_registry_globals.py  test_registry_plugin_manager.py  test_reseed_checker.py  test_sepenv.py  test_spec.py  test_specdict.py  test_typeguards.py
