# SPDX-FileCopyrightText: 2020-2024 CERN
# SPDX-FileCopyrightText: 2023-2024 GSI Helmholtzzentrum für Schwerionenforschung
# SPDX-FileNotice: All rights not expressly granted are reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+

[build-system]
requires = [
    'pip >= 22',
    'setuptools >= 45',
    'setuptools-scm[toml] ~= 8.0',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'cernml-coi'
authors = [
    {name = 'Nico Madysa', email = 'nico.madysa@cern.ch'},
]
description = 'Common optimization interfaces for RL/num. optimization'
readme = 'README.md'
license = {file='COPYING'}
requires-python = '>=3.9'
dependencies = [
    'gymnasium < 2',
    'numpy ~= 1.22',
    'scipy ~= 1.1',
    # Dependencies on importlib-metadata and typing-extensions are identical
    # with Gymnasium's.
    'importlib-metadata >= 4.8.0; python_version<"3.10"',
    'typing-extensions >= 4.3.0',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Physics',
    'Typing :: Typed',
]

[project.urls]
gitlab = 'https://gitlab.cern.ch/geoff/cernml-coi/'
'acc-py docs' = 'https://acc-py.web.cern.ch/gitlab/geoff/cernml-coi/'
'public docs' = 'https://cernml-coi.docs.cern.ch/'
wiki = 'https://wikis.cern.ch/pages/viewpage.action?pageId=194741479'

[project.optional-dependencies]
matplotlib = [
    'matplotlib ~= 3.8',
]
optimizers = [
    'cernml-coi-optimizers  ~= 2.0',
]
robotics = [
    'gymnasium-robotics ~= 1.0',
]
all = [
    'cernml-coi[gymnasium-robotics,matplotlib,optimizers]',
]
doc = [
    'sphinx >= 4.0',
    'sphinx-inline-tabs',
]
examples = [
    'cernml-coi[all]',
    'PyQt5 ~= 5.0',
    'stable_baselines3 ~= 2.0',
]
test = [
    'cernml-coi[all]',
    'pytest >= 6.0',
    'pytest-cov',
    'types-docutils',
    'typing-extensions',
]

[tool.setuptools]
zip-safe = true
package-data = {'*' = ['py.typed']}

[tool.setuptools_scm]

[tool.black]
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = 'black'
known_first_party = ['cernml.optimizers']

[tool.pytest.ini_options]
addopts = '--doctest-modules'
testpaths = ['src', 'tests']
doctest_optionflags = ['IGNORE_EXCEPTION_DETAIL']

[tool.coverage.run]
source = ['src']
branch = true

[tool.coverage.report]
exclude_also = [
    '^\s*from .* import',
    '^\s*import ',
    '^\s*except ImportError:$',
    'def __del__',
    'if .*\.TYPE_CHECKING',
    'raise NotImplementedError',
]

[tool.pylint]
master = {extension-pkg-whitelist = 'PyQt5'}

[tool.pylint.design]
max-args = 10

[tool.pylint.'messages control']
disable = [
    'fixme',
    'line-too-long',
    'similarities',
    'too-few-public-methods',
    'unpacking-non-sequence',
]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[[tool.mypy.overrides]]
module = ['scipy.*']
ignore_missing_imports = true
