# SPDX-FileCopyrightText: 2020-2024 CERN
# SPDX-FileCopyrightText: 2023-2024 GSI Helmholtzzentrum für Schwerionenforschung
# SPDX-FileNotice: All rights not expressly granted are reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+

[build-system]
requires = [
    'pip >= 22',
    'setuptools >= 45',
    'setuptools-scm[toml] ~= 8.0',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'cernml-coi'
authors = [
    {name = 'Nico Madysa', email = 'nico.madysa@cern.ch'},
]
description = 'Common optimization interfaces for RL/num. optimization'
readme = 'README.md'
license = {file='COPYING'}
requires-python = '>=3.9'
dependencies = [
    'gymnasium < 2',
    'numpy ~= 1.22',
    'scipy ~= 1.1',
    # Dependencies on importlib-metadata and typing-extensions are identical
    # with Gymnasium's.
    'importlib-metadata >= 4.8.0; python_version<"3.10"',
    'typing-extensions >= 4.3.0',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Physics',
    'Typing :: Typed',
]

[project.urls]
gitlab = 'https://gitlab.cern.ch/geoff/cernml-coi/'
'acc-py docs' = 'https://acc-py.web.cern.ch/gitlab/geoff/cernml-coi/'
'public docs' = 'https://cernml-coi.docs.cern.ch/'
wiki = 'https://wikis.cern.ch/pages/viewpage.action?pageId=194741479'

[project.optional-dependencies]
matplotlib = [
    'matplotlib ~= 3.8',
]
optimizers = [
    'cernml-coi-optimizers  ~= 2.0',
]
robotics = [
    'gymnasium-robotics ~= 1.0',
]
all = [
    'cernml-coi[gymnasium-robotics,matplotlib,optimizers]',
]
doc = [
    'sphinx >= 4.0',
    'sphinx-inline-tabs',
]
examples = [
    'cernml-coi[all]',
    'PyQt5 ~= 5.0',
    'stable_baselines3 ~= 2.0',
]
test = [
    'cernml-coi[all]',
    'pytest >= 6.0',
    'pytest-cov',
    'types-docutils',
    'typing-extensions',
]

[tool.setuptools]
zip-safe = true
package-data = {'*' = ['py.typed']}

[tool.setuptools_scm]

[tool.black]
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = 'black'
known_first_party = ['cernml.optimizers']

[tool.ruff]
fix = true
src = ['examples', 'src', 'test']
target-version = 'py39'

[tool.ruff.lint]
# Missing warnings:
# F822 not raised in __init__.py: https://github.com/astral-sh/ruff/issues/10095
# D* not raised in _*.py: https://github.com/astral-sh/ruff/issues/9561
extend-select = [
    'A', 'ARG', 'ASYNC', 'B', 'C4', 'C90', 'COM818', 'D', 'DTZ', 'EXE', 'FLY',
    'I', 'ICN', 'ISC', 'NPY', 'PD', 'PERF', 'PGH', 'PIE', 'PLR5501', 'PT',
    'PTH', 'PYI', 'RET', 'RSE', 'RUF', 'SIM', 'SLOT', 'T10', 'TD003', 'TRY',
    'UP',
]
ignore = [
    'D105',   # Missing docstring in magic method
    'D107',   # Missing docstring in __init__
    'D412',   # No blank lines allowed between a section header and its content
    'D417',   # Missing argument description in the docstring
    'ISC001', # Implicit string concatenation, conflicts with autoformat
    'RUF012', # Mutable class attributes should use `typing.ClassVar`
              # TODO Waiting for Gymnasium#951 to get fixed.
    # 'TRY301', # Abstract `raise` to an inner function
    'TRY003', # Avoid specifying long messages outside the exception class
    'UP037',  # Remove quotes from type annotation
]
flake8-pytest-style.fixture-parentheses = false
isort.split-on-trailing-comma = true
isort.known-first-party = ['cernml']
pycodestyle.max-doc-length = 72
pydocstyle.convention = 'google'
pydocstyle.ignore-decorators = ['overload', 'overrides']

[tool.ruff.lint.per-file-ignores]
'src/cernml/coi/_configurable.py' = ['A']
'**/{tests,docs}/*' = ['A001', 'ARG', 'D', 'INP']

[tool.pylint]
main.ignore-patterns = ['.*\.pyi$', 'test_.*\.py$']
master.extension-pkg-whitelist = 'PyQt5'
'messages control'.disable = ['all']
'messages control'.enable = [
    'F',
    'bad-inline-option',
    'cell-var-from-loop',
    'missing-class-docstring',
    'missing-function-docstring',
    'missing-module-docstring',
    'singledispatch-method',
    'singledispatchmethod-function',
    'super-init-not-called',
    'typevar-double-variance',
    'typevar-name-incorrect-variance',
    'typevar-name-mismatch',
    'unrecognized-inline-option',
    'unrecognized-option',
]

[tool.pytest.ini_options]
addopts = '--doctest-modules'
testpaths = ['src', 'tests']
doctest_optionflags = ['IGNORE_EXCEPTION_DETAIL']
markers = [
    'render_modes: metadata item `render_modes` of a mock Env'
]

[tool.coverage.run]
source = ['src']
branch = true

[tool.coverage.report]
exclude_also = [
    '^\s*@.*\.overload$',
    '^\s*def __del__',
    '^\s*except ImportError:$',
    '^\s*from .* import',
    '^\s*if .*\.TYPE_CHECKING:$',
    '^\s*if sys\.version_info ..? \(\d, \d+\):$',
    '^\s*import ',
    '^\s*raise NotImplementedError',
]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[[tool.mypy.overrides]]
module = ['scipy.*']
ignore_missing_imports = true
