[metadata]
name = cernml-coi
version = attr: cernml.coi.__version__
url = https://github.com/cern-desy-acc-opt/shared-interfaces
author = Nico Madysa
author_email = nico.madysa@cern.ch
description = Common optimization interfaces for RL/num. optimization
long_description = file: README.md
long_description_content_type = text/markdown
license = Other/Proprietary License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    gym >= 0.11
    numpy ~= 1.10
    scipy ~= 1.1
zip_safe = True

[options.package_data]
cernml.coi = py.typed

[options.packages.find]
include = cernml, cernml.*

[options.extras_require]
matplotlib =
    matplotlib ~= 3.0
examples =
    PyQt5 ~= 5.0
    matplotlib ~= 3.0
    stable_baselines3 >= 0.8.0
test =
    matplotlib ~= 3.0
    pytest >= 6.0
lint =
    PyQt5 ~= 5.0
    black
    matplotlib ~= 3.0
    mypy >= 0.782
    pylint >= 2.6.0
    pytest >= 6.0
    stable_baselines3 >= 0.8.0
