[metadata]
name = cernml-coi
url = https://github.com/cern-desy-acc-opt/shared-interfaces
author = Nico Madysa
author_email = nico.madysa@cern.ch
description = Common optimization interfaces for RL/num. optimization
long_description = file: README.md
long_description_content_type = text/markdown
license = Other/Proprietary License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    gym >= 0.11
    importlib-metadata >= 1.0, <4
    numpy ~= 1.10
    scipy ~= 1.1
zip_safe = True

[options.package_data]
cernml.coi = py.typed

[options.packages.find]
include = cernml, cernml.*

[options.extras_require]
# See https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# for information on the interpolation syntax.
matplotlib =
    matplotlib ~= 3.0
all =
    %(matplotlib)s
dev =
    black
    mypy
    pylint
doc =
    %(all)s
    sphinx
    recommonmark
    sphinx-rtd-theme
examples =
    %(all)s
    PyQt5 ~= 5.0
    stable_baselines3 >= 0.8.0
test =
    %(all)s
    pytest
    pytest-cov
lint =
    %(dev)s
    %(examples)s
    %(test)s
