[metadata]
name = cernml-coi
url = https://github.com/cern-desy-acc-opt/shared-interfaces
project_urls =
    Gitlab = https://github.com/cern-desy-acc-opt/shared-interfaces
    Acc-Py docs = https://acc-py.web.cern.ch/gitlab/be-op-ml-optimization/cernml-coi/
    Public docs = https://cernml-coi.docs.cern.ch/
    Wiki = https://wikis.cern.ch/pages/viewpage.action?pageId=194741479
author = Nico Madysa
author_email = nico.madysa@cern.ch
description = Common optimization interfaces for RL/num. optimization
long_description = file: README.md
long_description_content_type = text/markdown
license = Other/Proprietary License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    # Temporary hack: Gym 0.22 removes GoalEnv and puts it into a new
    # gym-robotics package. We'll have to address that.
    gym >= 0.11, <0.22
    importlib-metadata >=3.6, <5
    numpy ~= 1.10
    scipy ~= 1.1
zip_safe = True

[options.package_data]
cernml.coi = py.typed

[options.packages.find]
include = cernml, cernml.*

[options.extras_require]
# See https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# for information on the %(interpolation)s syntax.
matplotlib =
    matplotlib ~= 3.0
pyjapc =
    pyjapc ~= 2.2
all =
    %(matplotlib)s
    %(pyjapc)s
dev =
    black == 22.3.0
    mypy == 0.931
    pycodestyle == 2.8.0
    pylint == 2.13.0
    PyQt5-stubs ~= 5.0
# Splitting this out of `doc` is necessary to build documentation
# outside of CERN, where PyJapc isn't available.
doc_only =
    sphinx
    myst-parser
doc =
    %(all)s
    %(doc_only)s
examples =
    %(all)s
    PyQt5 ~= 5.0
    stable_baselines3 >= 0.8.0
test =
    %(all)s
    pytest
    pytest-cov
lint =
    %(dev)s
    %(examples)s
    %(test)s

[pycodestyle]
max-doc-length = 72
max-line-length = 88
